--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tipster Gadget | Pronósticos Deportivos</title>
+
+  <!-- FUENTE -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
+
+  <style>
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+
+    body {
+      font-family: 'Montserrat', sans-serif;
+      background: linear-gradient(180deg, #050b1a, #020617);
+      color: #ffffff;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+    }
+
+    .card {
+      background: #0b1229;
+      border-radius: 20px;
+      max-width: 420px;
+      width: 100%;
+      padding: 30px 25px;
+      text-align: center;
+      box-shadow: 0 0 25px rgba(0,0,0,0.6);
+      border: 1px solid #1f2a55;
+    }
+
+    .logo {
+      font-size: 28px;
+      font-weight: 900;
+      letter-spacing: 1px;
+      margin-bottom: 10px;
+      color: #00ff99;
+    }
+
+    .subtitle {
+      font-size: 14px;
+      opacity: 0.9;
+      margin-bottom: 25px;
+    }
+
+    .sports {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 25px;
+      font-size: 22px;
+    }
+
+    .box {
+      background: #111b3d;
+      border-radius: 12px;
+      padding: 14px;
+      margin-bottom: 18px;
+      border: 1px solid #1f2a55;
+      font-size: 14px;
+    }
+
+    .box strong {
+      color: #00ff99;
+    }
+
+    .cta {
+      display: block;
+      margin-top: 20px;
+      background: linear-gradient(90deg, #00ff99, #00ccff);
+      color: #000;
+      padding: 16px;
+      border-radius: 14px;
+      font-weight: 900;
+      font-size: 16px;
+      text-decoration: none;
+      transition: 0.3s;
+      animation: pulse 1.5s infinite;
+    }
+
+    .cta:hover {
+      transform: scale(1.05);
+    }
+
+    @keyframes pulse {
+      0% { box-shadow: 0 0 0 0 rgba(0,255,153,0.6); }
+      70% { box-shadow: 0 0 0 15px rgba(0,255,153,0); }
+      100% { box-shadow: 0 0 0 0 rgba(0,255,153,0); }
+    }
+
+    .footer {
+      margin-top: 18px;
+      font-size: 11px;
+      opacity: 0.6;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div class="card">
+
+    <div class="logo">TIPSTER GADGET</div>
+    <div class="subtitle">Pronósticos deportivos profesionales</div>
+
+    <div class="sports">⚽ 🏀 🎾</div>
+
+    <div class="box">
+      📊 <strong>Análisis diario</strong> de fútbol, NBA y más
+    </div>
+
+    <div class="box">
+      🧠 Estrategias reales + gestión de banca
+    </div>
+
+    <div class="box">
+      🚀 Acceso GRATIS al canal de Telegram
+    </div>
+
+    <!-- 👉 CAMBIA ESTE ENLACE POR TU TELEGRAM -->
+    <a class="cta" href="https://t.me/TU_CANAL_AQUI" target="_blank">
+      👉 UNIRME AL CANAL DE TELEGRAM
+    </a>
+
+    <div class="footer">
+      +18 | Apuesta con responsabilidad
+    </div>
+
+  </div>
+
+</body>
+</html>
 
