Update titles and styles in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EcoAnalista | Picks Profesionales</title>
+  <title>EcoAnalista | Picks Deportivos</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700;900&display=swap" rel="stylesheet">
 
@@ -12,7 +12,7 @@
 
     body{
       font-family:'Poppins',sans-serif;
-      background:radial-gradient(circle at top, #1b0033, #02010a);
+      background:linear-gradient(135deg,#00c9b7,#0077ff);
       min-height:100vh;
       display:flex;
       align-items:center;
@@ -24,21 +24,22 @@
     .container{
       max-width:480px;
       width:100%;
-      background:linear-gradient(180deg,#0d0b1f,#05040d);
+      background:linear-gradient(180deg,#0b0f1f,#05060f);
       border-radius:26px;
-      padding:32px 26px;
-      box-shadow:0 0 40px rgba(140,0,255,0.35);
+      padding:34px 26px;
+      box-shadow:0 0 45px rgba(0,0,0,0.6);
       border:1px solid rgba(255,255,255,0.08);
     }
 
     .badge{
-      background:linear-gradient(90deg,#ff00cc,#7f00ff);
+      background:linear-gradient(90deg,#00ffe5,#00c9b7);
+      color:#000;
       display:inline-block;
       padding:6px 16px;
       border-radius:30px;
       font-size:12px;
       margin-bottom:14px;
-      font-weight:700;
+      font-weight:800;
       letter-spacing:1px;
     }
 
@@ -47,14 +48,17 @@
       font-weight:900;
       line-height:1.1;
       margin-bottom:10px;
-      background:linear-gradient(90deg,#00eaff,#ff00cc);
-      -webkit-background-clip:text;
-      -webkit-text-fill-color:transparent;
+      color:#00ffe5;
+    }
+
+    h1 span{
+      font-size:26px;
+      margin-left:6px;
     }
 
     .desc{
       font-size:14px;
-      opacity:0.9;
+      opacity:0.95;
       margin-bottom:22px;
     }
 
@@ -66,7 +70,7 @@
     }
 
     .card{
-      background:#0f0c2b;
+      background:#0f142b;
       border-radius:14px;
       padding:14px 10px;
       text-align:center;
@@ -83,7 +87,7 @@
     .cta{
       display:block;
       width:100%;
-      background:linear-gradient(90deg,#00eaff,#7f00ff);
+      background:#00ffe5;
       color:#000;
       padding:18px;
       border-radius:16px;
@@ -115,9 +119,9 @@
     .cta:hover{transform:scale(1.04)}
 
     .trust{
-      margin-top:16px;
-      font-size:12px;
-      opacity:0.7;
+      margin-top:18px;
+      font-size:13px;
+      opacity:0.85;
       text-align:center;
     }
 
@@ -128,31 +132,33 @@
 
   <div class="container">
 
-    <div class="badge">🔥 PICKS PREMIUM</div>
+    <div class="badge">🔥 PICKS DEPORTIVOS</div>
 
-    <h1>TIPSTER GADGET</h1>
+    <h1>ECOANALISTA <span>📊</span></h1>
+
     <p class="desc">
-      Comunidad de apostadores con análisis profesional en tiempo real.
+      Comunidad de ganadores
     </p>
 
     <div class="grid">
       <div class="card"><span>⚽</span>Fútbol Diario</div>
       <div class="card"><span>🏀</span>NBA Picks</div>
       <div class="card"><span>🎯</span>Estrategias</div>
-      <div class="card"><span>📈</span>Gestión Banca</div>
+      <div class="card"><span>📈</span>Gestión de banca</div>
     </div>
 
     <a class="cta" href="https://t.me/TU_CANAL_AQUI" target="_blank">
-      🚀 ACCEDER AL CANAL DE TELEGRAM
+      🚀 ACCEDER GRATIS AL CANAL DE TELEGRAM
     </a>
 
     <div class="trust">
-      +18 | Resultados no garantizados | Juega responsable
+      Esta es una invitación para unirte a EcoAnalista
     </div>
 
   </div>
 
 </body>
 </html>
+
 
 
