--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     body{
       font-family:'Poppins',sans-serif;
-      background:linear-gradient(135deg,#00c9b7,#0077ff);
+      background:linear-gradient(135deg,#0f4c34,#ffffff);
       min-height:100vh;
       display:flex;
       align-items:center;
@@ -134,10 +134,10 @@
 
     <div class="badge">🔥 PICKS DEPORTIVOS</div>
 
-    <h1>ECOANALISTA <span>📊</span></h1>
+    <h1>ECOANALISTA <span>📊💰</span></h1>
 
     <p class="desc">
-      Comunidad de ganadores
+      Bienvenido a Ecoanalista donde cada dia es una oportunidad para ganar 🔥💰
     </p>
 
     <div class="grid">
@@ -147,7 +147,7 @@
       <div class="card"><span>📈</span>Gestión de banca</div>
     </div>
 
-    <a class="cta" href="https://t.me/TU_CANAL_AQUI" target="_blank">
+    <a class="cta" href="https://t.me/+gQpXBCZ0x49hOTNh" target="_blank">
       🚀 ACCEDER GRATIS AL CANAL DE TELEGRAM
     </a>
 
