--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
 
     .badge{
-      background:linear-gradient(90deg,#00ffe5,#00c9b7);
+      background:linear-gradient(90deg,#0088cc,#00c9b7);
       color:#000;
       display:inline-block;
       padding:6px 16px;
