Fix background gradient and update welcome text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     .container{
       max-width:480px;
       width:100%;
-      background:linear-gradient(180deg,#0b0f1f,#05060f);
+      background:linear-gradient(180deg,#0b0f1f,#0b0f1f);
       border-radius:26px;
       padding:34px 26px;
       box-shadow:0 0 45px rgba(0,0,0,0.6);
@@ -137,7 +137,7 @@
     <h1>ECOANALISTA <span>📊💰</span></h1>
 
     <p class="desc">
-      Bienvenido a Ecoanalista donde cada dia es una oportunidad para ganar 🔥💰
+      Bienvenido a EcoAnalista donde cada dia es una oportunidad para ganar 🔥💰
     </p>
 
     <div class="grid">
