--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <div class="badge">🔥 PICKS DEPORTIVOS</div>
 
-    <h1>ECOANALISTA <span>📊💰</span></h1>
+    <h1>ECOANALISTA <span>🇪🇨📊💰</span></h1>
 
     <p class="desc">
       Bienvenido a EcoAnalista donde cada dia es una oportunidad para ganar 🔥💰
@@ -148,11 +148,11 @@
     </div>
 
     <a class="cta" href="https://t.me/+gQpXBCZ0x49hOTNh" target="_blank">
-      🚀 ACCEDER GRATIS AL CANAL DE TELEGRAM
+      📱 ACCEDER GRATIS AL CANAL DE TELEGRAM
     </a>
 
     <div class="trust">
-      Esta es una invitación para unirte a EcoAnalista
+      Esta es una invitación para unirte a EcoAnalista 🇪🇨
     </div>
 
   </div>
