--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ src="https://www.facebook.com/tr?id=25929977996619492&ev=PageView&noscript=1"
       <div class="card"><span>📈</span>Gestión de banca</div>
     </div>
 
-    <a class="cta" href="https://t.me/+gQpXBCZ0x49hOTNh" target="_blank">
+    <a class="cta" href="https://t.me/+gQpXBCZ0x49hOTNh" target="_blank" id="joinTelegram" onclick="fbq('trackCustom', 'TelegramJoinClick')">
       📱 ACCEDER GRATIS AL CANAL DE TELEGRAM
     </a>
 
