--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ fbq('track', 'PageView');
 src="https://www.facebook.com/tr?id=25929977996619492&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
+<head>
+  <meta name="facebook-domain-verification" content="kylvqb5r7j1r64pl7sgkubayjyd2yy" />
   
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700;900&display=swap" rel="stylesheet">
 
