--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="facebook-domain-verification" content="ng5hsjrh645pui8iw2lvf5ny7psy6g" />
   <title>EcoAnalista | Picks Deportivos</title>
 
   <!-- Meta Pixel Code -->
